--- a/ABAS/.classpath
+++ b/ABAS/.classpath
@@ -24,5 +24,6 @@
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/guava-18.0.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/jackson-all-1.9.11.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/json_simple-1.1.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
